force-app/main/default/objects/Card_Benefit__c/Card_Benefit__c.object-meta.xml
<CustomObject>
    <description>Representa los beneficios y características comerciales asociados a un producto de tarjeta de crédito, incluyendo información como tasa efectiva anual, acumulación de millas, porcentaje de cashback y otros atributos relevantes para su consulta y administración.</description>
    <label>Beneficio de Tarjeta</label>
    <nameField>
        <label>Beneficio de Tarjeta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficios de Tarjeta</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>