force-app/main/default/objects/Card_Benefit__c/fields/Annual_Effective_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Effective_Rate__c</fullName>
    <description>Indica la tasa efectiva anual aplicable al producto de tarjeta de crédito asociado.</description>
    <inlineHelpText>Ingrese la tasa efectiva anual correspondiente a la tarjeta.</inlineHelpText>
    <label>Tasa Efectiva Anual</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>