force-app/main/default/objects/Card_Benefit__c/fields/Annual_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee__c</fullName>
    <description>Almacena el monto de la membresía o cuota anual asociada al producto de tarjeta.</description>
    <inlineHelpText>Ingrese el monto de la cuota anual de la tarjeta.</inlineHelpText>
    <label>Cuota Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>