force-app/main/default/objects/Card_Benefit__c/fields/Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Name__c</fullName>
    <description>Almacena el nombre comercial de la tarjeta de crédito a la que pertenece el beneficio, como Visa Plata, Visa Oro o Visa Infinite.</description>
    <inlineHelpText>Ingrese el nombre de la tarjeta de crédito asociada a este beneficio.</inlineHelpText>
    <label>Nombre de la Tarjeta</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>