force-app/main/default/objects/Card_Benefit__c/fields/Cashback_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Cashback_Percentage__c</fullName>
    <description>Indica el porcentaje de devolución de consumos aplicable al producto de tarjeta.</description>
    <inlineHelpText>Ingrese el porcentaje de cashback que ofrece esta tarjeta.</inlineHelpText>
    <label>Porcentaje de Cashback</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>