force-app/main/default/objects/Card_Benefit__c/fields/Miles_Accumulation__c.field-meta.xml
<CustomField>
    <fullName>Miles_Accumulation__c</fullName>
    <description>Describe la mecánica de acumulación de millas asociada a la tarjeta de crédito.</description>
    <inlineHelpText>Ingrese la forma en que la tarjeta acumula millas. Ejemplo: 1 milla por cada dólar consumido.</inlineHelpText>
    <label>Acumulación de Millas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>