force-app/main/default/objects/Card_Benefit__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Define el orden de visualización de los beneficios de tarjeta, mostrando primero las tarjetas de mayor jerarquía o prioridad.</description>
    <inlineHelpText>Ingrese la prioridad de visualización del beneficio. Un valor menor representa mayor prioridad.</inlineHelpText>
    <label>Prioridad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>