force-app/main/default/objects/Card_Benefit__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relaciona el beneficio con el producto financiero de tarjeta de crédito registrado en el catálogo de productos.</description>
    <inlineHelpText>Seleccione el producto de tarjeta de crédito al que pertenece este beneficio.</inlineHelpText>
    <label>Producto Financiero</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Beneficios de Tarjeta</relationshipLabel>
    <relationshipName>Beneficios_de_Tarjeta</relationshipName>
    <type>Lookup</type>
</CustomField>